objects/Sales_Attribution__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Associate_Name__c</fullName>
        <formula>Associate_Name__r.FirstName + &quot; &quot; +  Associate_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Associate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_s_Gallery_Number__c</fullName>
        <formula>Associate_Name__r.Gallery_TEXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate&apos;s Gallery Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Amount__c</fullName>
        <formula>Attribution_Percent__c *  Order__r.Merchandise_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribution_ID__c</fullName>
        <label>Associate User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Name__c</fullName>
        <label>Sales Attribution ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Percent__c</fullName>
        <label>Attribution Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Associate (Remove)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>rh.com, restorationhardware.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Attributions</relationshipLabel>
        <relationshipName>Sales_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXT_Sales_Attribution__c</fullName>
        <externalId>true</externalId>
        <label>EXT Sales Attribution</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entered_by_Associate__c</fullName>
        <formula>Order__r.Entered_by_Associate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entered by Associate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallery_Number__c</fullName>
        <formula>IF( LEN( Order__r.Gallery_Number__c  )=1 ,  TEXT(0) &amp; TEXT(0)  &amp; Order__r.Gallery_Number__c, 
IF( LEN(Order__r.Gallery_Number__c )=2 , TEXT(0) &amp;Order__r.Gallery_Number__c, Order__r.Gallery_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gallery Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order Number</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Sales Attributions</relationshipLabel>
        <relationshipName>Sales_Attributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Count__c</fullName>
        <formula>IF( Primary_Associate__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Attribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Attribution_Percent__c</columns>
        <columns>Attribution_ID__c</columns>
        <columns>Attribution_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Primary_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000000000}</displayFormat>
        <label>Sales Attribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Attributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Order_Number</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Order__c )</errorConditionFormula>
        <errorDisplayField>Order__c</errorDisplayField>
        <errorMessage>Cannot change Order association</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Leaders_Can_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND($UserRole.Name != &quot;Gallery Field Leader&quot; ,$UserRole.Name != &quot;Administration&quot;,  $User.Title  !=  &quot;Gallery Leader&quot; , $User.Title  != &quot;Field Leader&quot;)</errorConditionFormula>
        <errorMessage>Your changes cannot be saved because you are not the authorized leader to make modifications on this record. Please partner with the authorized leader to modify.</errorMessage>
    </validationRules>
</CustomObject>